[#66734520] collapse button showing correctly

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -133,6 +133,14 @@ img.center {
   padding-left: 40px;
 }
 
+.icon-bar {
+  background-color: #cccccc;
+}
+
+.navbar-toggle {
+  border-color: #dddddd;
+}
+
 .affix {
     position: fixed;
     top: 0px;
